# src/Services/Proposing/Proposing.API/Application/Queries/ProductModel/ProductModelViewModel.cs
@@ -1,14 +1,15 @@
-﻿using System;
+﻿using Proposing.API.Application.Queries.ProductModel;
+using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
 
 namespace Proposing.API.Application.Queries
 {
-    public class ProductDefinitionViewModel
+    public class ProductModelViewModel
     {
         public int Id { get; set; }
         public string Name { get; set; }
-        public List<ProductDefinitionViewModel> DependsOnProducts { get; set; }
+        public List<ProductDefinitionViewModel> Products { get; set; }
     }
 }
