# src/Services/Proposing/Proposing.API/Application/Queries/ProductScope/PayrollProductCountryViewModel.cs
@@ -1,4 +1,5 @@
-﻿using System;
+﻿using Proposing.API.Application.Queries.ProductModel;
+using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
@@ -9,6 +10,6 @@ namespace Proposing.API.Application.Queries.ProductScope
     {
         public int ProposalId { get; set; }
         public int CountryId { get; set; }
-        public int LevelId { get; set; }
+        public ComponentViewModel Level { get; set; }
     }
 }
